Fix combobox styling on Mac

--- a/css/eddypro-mac.qss
+++ b/css/eddypro-mac.qss
@@ -334,6 +334,10 @@ QComboBox::drop-down {
     border-bottom-right-radius: 3px;
 }
 
+/* QComboBox::drop-down::item {
+    min-width: 50px;
+} */
+
 QComboBox::down-arrow {
     image: url(:/icons/combo-normal);
 }
@@ -352,6 +356,32 @@ QComboBox::down-arrow:disabled,
 QComboBox::down-arrow:off {
     left: 0px;
     image: url(:/icons/combo-disabled);
+}
+
+/* dropdown popup list */ 
+QComboBox QListView {
+    background-color: #eee;
+    border: 1px solid gray;
+    border-radius: 3px;
+    padding: 1px 3px;
+    min-width: 7em;
+}
+
+QComboBox::item:alternate {
+    background: white;
+}
+
+QComboBox::item:selected {
+    border: 1px solid transparent;
+    color: white;
+    background: #318ef4;
+}
+
+QComboBox::indicator {
+    background-color: transparent;
+    selection-background-color: transparent;
+    color: transparent;
+    selection-color: transparent;
 }
 
 MainWindow {
