--- a/css/eddypro-mac.qss
+++ b/css/eddypro-mac.qss
@@ -358,7 +358,7 @@ QComboBox::down-arrow:off {
     image: url(:/icons/combo-disabled);
 }
 
-/* dropdown popup list */ 
+/* dropdown popup list */
 QComboBox QListView {
     background-color: #eee;
     border: 1px solid gray;
@@ -900,6 +900,38 @@ QLabel[applogoSmallLabel="true"]:hover {
     min-height: 70px;
 }
 
+QLabel[toviLabel="true"] {
+    image: url(:/icons/tovi-ads);
+    min-width: 644px;
+    min-height: 158px;
+    /* margin: 10px auto; */
+}
+
+QLabel[toviLabel="true"]:hover {
+    image: url(:/icons/tovi-ads-hover);
+    min-width: 644px;
+    min-height: 158px;
+}
+
+QPushButton#toviLogoImg {
+    background-color: transparent;
+    border: none;
+    image: url(:/icons/tovi-logo);
+    min-width: 35px;
+    max-width: 35px;
+    min-height: 30px;
+    max-height: 30px;
+    margin-left: 5px;
+}
+
+QPushButton#toviLogoImg:hover {
+    image: url(:/icons/tovi-logo-hover);
+}
+
+QPushButton#toviLogoImg:pressed {
+    image: url(:/icons/tovi-logo-pressed);
+}
+
 QLabel[feedbackLabel="true"] {
     image: url(:/icons/feedback-button);
     min-width: 168px;
@@ -1029,6 +1061,11 @@ QLabel[groupLabel="true"] {
     font-size: 12px;
     padding: 0.4em 0.4em 0.1em 0.4em;
     margin-bottom: 5px;
+}
+
+QLabel[toviAds="true"] {
+    font-size: 14px;
+    font-style: italic;
 }
 
 /*QLabel[groupLabel="true"] {
