Iteration on Tovi ad

--- a/css/eddypro-mac.qss
+++ b/css/eddypro-mac.qss
@@ -901,27 +901,65 @@ QLabel[applogoSmallLabel="true"]:hover {
 }
 
 ClickLabel[toviLabel="true"] {
-    image: url(:/icons/tovi-ads);
+    image: url(:/icons/tovi-ad-normal);
     min-width: 578px;
     min-height: 165px;
 }
 
 ClickLabel[toviLabel="true"]:hover {
-    image: url(:/icons/tovi-ads-hover);
+    image: url(:/icons/tovi-ad-hover);
     min-width: 578px;
     min-height: 165px;
 }
 
 ClickLabel[toviLabel="true"]:pressed {
-    image: url(:/icons/tovi-ads-pressed);
+    image: url(:/icons/tovi-ad-pressed);
     min-width: 578px;
     min-height: 165px;
+}
+
+ClickLabel[toviWideLabel="true"] {
+    image: url(:/icons/tovi-wide-ad-normal);
+    min-width: 513px;
+    min-height: 97px;
+}
+
+ClickLabel[toviWideLabel="true"]:hover {
+    image: url(:/icons/tovi-wide-ad-hover);
+    min-width: 513px;
+    min-height: 97px;
+}
+
+ClickLabel[toviWideLabel="true"]:pressed {
+    image: url(:/icons/tovi-wide-ad-pressed);
+    min-width: 513px;
+    min-height: 97px;
+}
+
+ClickLabel[toviThinLabel="true"] {
+    image: url(:/icons/tovi-thin-ad-normal);
+    min-width: 305px;
+    min-height: 108px;
+    margin-left: -10px;
+    padding-left: 0px;
+}
+
+ClickLabel[toviThinLabel="true"]:hover {
+    image: url(:/icons/tovi-thin-ad-hover);
+    min-width: 305px;
+    min-height: 108px;
+}
+
+ClickLabel[toviThinLabel="true"]:pressed {
+    image: url(:/icons/tovi-thin-ad-pressed);
+    min-width: 305px;
+    min-height: 108px;
 }
 
 QPushButton#toviLogoImg {
     background-color: transparent;
     border: none;
-    image: url(:/icons/tovi-logo);
+    image: url(:/icons/tovi-icon-normal);
     min-width: 35px;
     max-width: 35px;
     min-height: 30px;
@@ -930,11 +968,11 @@ QPushButton#toviLogoImg {
 }
 
 QPushButton#toviLogoImg:hover {
-    image: url(:/icons/tovi-logo-hover);
+    image: url(:/icons/tovi-icon-hover);
 }
 
 QPushButton#toviLogoImg:pressed {
-    image: url(:/icons/tovi-logo-pressed);
+    image: url(:/icons/tovi-icon-pressed);
 }
 
 QLabel[feedbackLabel="true"] {
