--- a/eddypro_lin.qrc
+++ b/eddypro_lin.qrc
@@ -134,12 +134,18 @@
         <file alias="vlink">img/links/vlink.png</file>
         <file alias="vlink-hover">img/links/vlink-hover.png</file>
 
-        <file alias="tovi-ads">img/tovi/tovi-ads-normal.png</file>
-        <file alias="tovi-ads-hover">img/tovi/tovi-ads-hover.png</file>
-        <file alias="tovi-ads-pressed">img/tovi/tovi-ads-pressed.png</file>
-        <file alias="tovi-logo">img/tovi/tovi-logo-normal.png</file>
-        <file alias="tovi-logo-hover">img/tovi/tovi-logo-hover.png</file>
-        <file alias="tovi-logo-pressed">img/tovi/tovi-logo-pressed.png</file>
+        <file alias="tovi-ad-normal">img/tovi/ad-normal.png</file>
+        <file alias="tovi-ad-hover">img/tovi/ad-hover.png</file>
+        <file alias="tovi-ad-pressed">img/tovi/ad-pressed.png</file>
+        <file alias="tovi-wide-ad-normal">img/tovi/wide-ad-normal.png</file>
+        <file alias="tovi-wide-ad-hover">img/tovi/wide-ad-hover.png</file>
+        <file alias="tovi-wide-ad-pressed">img/tovi/wide-ad-pressed.png</file>
+        <file alias="tovi-thin-ad-normal">img/tovi/thin-ad-normal.png</file>
+        <file alias="tovi-thin-ad-hover">img/tovi/thin-ad-hover.png</file>
+        <file alias="tovi-thin-ad-pressed">img/tovi/thin-ad-pressed.png</file>
+        <file alias="tovi-icon-normal">img/tovi/icon-normal.png</file>
+        <file alias="tovi-icon-hover">img/tovi/icon-hover.png</file>
+        <file alias="tovi-icon-pressed">img/tovi/icon-pressed.png</file>
 
         <file alias="feedback-button">img/feedback/feedback-button.png</file>
         <file alias="feedback-button-hover">img/feedback/feedback-button-hover.png</file>
